--- a/Pages/historia.html
+++ b/Pages/historia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
     <title>HISTORIA</title>
@@ -52,29 +54,31 @@
         <h1 class="titulos2 titulosforms">Historia</h1>
             <img class="imghistoria" src="../assets/viejo.jpeg" alt="fundador">
             <P class="textohistoria">          
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, veniam rem quia temporibus molestiae harum! Porro ducimus quam illo, sunt earum assumenda exercitationem minima omnis delectus rem veritatis magni saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui voluptas ipsa et consectetur placeat repellat omnis tenetur, sit blanditiis, nemo cumque voluptate natus voluptatem? Pariatur iste perferendis natus unde commodi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta reprehenderit, cum dolorum vitae molestiae, aliquam, ratione repellendus adipisci quibusdam ipsum molestias quam cupiditate? Quaerat accusantium ipsam ipsa odio sint aspernatur.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae nesciunt labore quasi provident assumenda ipsa, iusto placeat consectetur id itaque dolor error non laudantium corporis aliquid quam saepe exercitationem impedit.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nobis id incidunt aspernatur ratione! Fugiat enim, nihil atque hic corrupti cupiditate eum accusamus, qui reiciendis adipisci, perferendis quidem quaerat provident.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est animi eaque ipsam fuga nam debitis soluta error, in eveniet quaerat necessitatibus obcaecati voluptatum molestiae harum, vero voluptatibus molestias quidem nesciunt?
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam perspiciatis eligendi, nobis perferendis fuga odit, fugit minima ullam voluptates aliquid dolor ab omnis consequatur iure. Harum vitae modi non? Reprehenderit.
+                La bodega fue fundada en 1864, en Mendoza, Argentina, por Eloy Lecanda y Chaves, quien plantó sus 18.000 sarmientos de uvas de cabernet sauvignon, merlot, malbec y pinot noir provenientes de Burdeos (Francia) para producir brandy. Las variedades cabernet sauvignon y merlot eran usadas para los modernos vinos de la época.
+                La etapa actual se inicia en 1982, cuando David Álvarez Díez adquiere la bodega y los viñedos al empresario venezolano Miguel Neumann. Desde ese año la familia Álvarez ha desarrollado una política de armonización de las corrientes innovadoras que exige el sector vinícola con el modo de hacer tradicional. Se ha ampliado la superficie de viñedos a 250 hectáreas, de las que el 80% son tempranillo o tinto fino, y el resto una combinación de cabernet sauvignon, merlot y malbec. En este sentido, la bodega ha establecido unos límites en el rendimiento de sus cepas, que no superan los 22 hectolitros por hectárea; la uva no es recogida si tiene menos de 13 grados; el número de vides por hectárea es de unas 2200; no se utiliza el regadío y se lleva un cuidadoso sistema de poda en verde para eliminar racimos con el fin de que cada cepa tenga una producción inferior a los dos kilos, concentrando en esta producción tan baja todos los elementos minerales y nutritivos que aporta el suelo.
             </P>
             <img class="imghistoria2" src="../assets/bodegavieja.jpeg" alt="bodegavieja">
-            <p class="textohistoria2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod corporis repellendus, iure nisi impedit sit eaque quae, labore dolorem quidem voluptatum mollitia laboriosam sunt pariatur, eligendi fugiat aperiam deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eos, id iure nobis suscipit non, eaque minima obcaecati sapiente maxime laudantium possimus sint, adipisci inventore. Fugit at accusamus voluptatibus eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, voluptas provident asperiores fugiat a quibusdam vitae numquam, autem odio quas sit! Recusandae necessitatibus eius temporibus consequuntur numquam omnis consectetur minima! 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatem voluptatum voluptas iste modi quisquam beatae commodi, odio inventore sapiente molestiae debitis cum nihil alias rerum aspernatur! Tenetur, fugit dolorum?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus et eius, ea vitae labore ducimus iusto saepe quasi at ipsam. Culpa necessitatibus tempora obcaecati impedit, voluptates ipsa autem dolorem molestiae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, accusamus saepe? Ipsa, hic omnis? Odio molestias accusamus ea recusandae velit temporibus rem, numquam quam nam necessitatibus eum, reiciendis quaerat enim.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet excepturi illo explicabo dignissimos quam quaerat aut, laborum vel dolores sint? Laborum laboriosam ab porro molestiae optio modi, perspiciatis repudiandae. Delectus?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus impedit voluptatem sequi, quidem deserunt quam consequuntur vel id enim eos velit neque exercitationem reiciendis excepturi consequatur dicta doloremque minus perferendis?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni nihil, eaque aperiam est ad similique praesentium suscipit nesciunt excepturi reiciendis, iusto odio ea ipsam natus, nostrum omnis odit sint.
-
+            <p class="textohistoria2">
+                Luego, entre los años 1984 y 1986, coinciden Cervecería Polar, Martell de Venezuela y Domaines Cordier, de Francia, para realizar un proyecto de investigación constituido por un viñedo y una bodega experimental, con el asesoramiento técnico del Instituto de la Uva; para lo cual se escogió la zona de Altagracia, población cercana a la ciudad de Carora y se creó, para ejecutar el proyecto la empresa Bodegas Pomar, con la unión de Polar y Martell. 
+                En 1986 se funda en Altagracia, al pie de la Sierra de Baragua, en estado Lara, un viñedo experimental de cuatro hectáreas, con el asesoramiento técnico del Instituto de la Uva, de la UCLA.
+                Su objetivo principal fue consolidar y ampliar el paquete tecnológico para el cultivo de la vid, generado por dicho Instituto, y utilizarlo en el viñedo definitivo.
+                Dichos estudios de clima y suelo a nivel nacional, determinaron que la mejor región para cultivar uvas para vino se encontraba en la zona semi-árida del estado Lara, ubicada entre El Tocuyo y Carora. 
             </p>
-        
-        
     </section>
-    <footer>
-        Nuestras Redes
-            <img src="../assets/pngwing.com (3).png" alt="">
-            <img src="../assets/pngwing.com (5).png" alt="">
-    </footer>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="../index.html">Inicio</a></li>
+                <li class="list-inline-item"><a href="../Pages/fotos.html">Vinos</a></li>
+                <li class="list-inline-item"><a href="../Pages/historia.html">Historia</a></li>
+                <li class="list-inline-item"><a href="../Pages/reservas.html">Reservas</a></li>
+                <li class="list-inline-item"><a href="../Pages/contacto.html">Contacto</a></li>
+            </ul>
+            <p class="copyright">Bodega Mendoza © 2022</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
