--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Abyssinica SIL' rel='stylesheet'>
@@ -84,11 +86,21 @@
             <h2 class="title">Conócenos</h2>
             <p class="textohome">Los vinos saben mejor cuando se los disfruta en un lugar espectacular. Vení y visitanos para vivir la experiencia de más de 125 años de herencia de producción de vinos en nuestra hermosa locación a los pies de Los Andes. Descubrí qué hace a la creación de tu vendimia favorita, disfrutá de un maravilloso almuerzo en nuestro restaurante La Vid, tomá una clase de cocina, pedaleá entre las vides en un safari fotográfico, o acomodate en un picnic gourmet especial con vista a los viñedos y los andes nevados. Incluso podés optar por una cata exclusiva de los vinos más icónicos del viñedo en la Cava Selecta, o convertite en enólogo por el día y crea tu propio blend.
     </section>
-    <footer>
-        Nuestras Redes
-            <img src="assets/pngwing.com (3).png" alt="">
-            <img src="assets/pngwing.com (5).png" alt="">
-    </footer>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="index.html">Inicio</a></li>
+                <li class="list-inline-item"><a href="Pages/fotos.html">Vinos</a></li>
+                <li class="list-inline-item"><a href="Pages/historia.html">Historia</a></li>
+                <li class="list-inline-item"><a href="Pages/reservas.html">Reservas</a></li>
+                <li class="list-inline-item"><a href="Pages/contacto.html">Contacto</a></li>
+            </ul>
+            <p class="copyright">Bodega Mendoza © 2022</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
